# Weather-Data-Collection

./: .gitignore  225.ipynb  README.md  main.py  pyproject.toml
Source/data_cleaning/: data_cleaning.ipynb
Source/data_preparation/: __init__.py  data_preparation.ipynb  data_preparation.py
Source/db_con_config/: __init__.py  db_con_config.py
Source/db_functions/: __init__.py  db_functions.py
Source/get_weather_data/: __init__.py  api_weather_data.py  get_weather_data.py
Source/locations/: locations.txt
Source/logger/: __init__.py  app_logger.py
misc/: fake_weather_data_sql.sql  weather-data-analytical-sql.sql  weather-data-main-sql.sql
