[tool.poetry]
name = "weather-data-system"
version = "0.1.0"
description = "Weather data collection system project"
authors = ["repeckadonatas <repeckadonatas@yahoo.comm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
psycopg = {extras = ["binary"], version = "^3.1.17"}
tabulate = "^0.9.0"
pandas = "^2.2.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
